--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ public/css/main.css
 
 # Coverage reports
 coverage
-
+.nyc*
 # API keys and secrets
 .env
 
@@ -36,6 +36,7 @@ Thumbs.db
 
 # Ignore built ts files
 dist/**/*
+build/*
 
 # ignore yarn.lock
 yarn.lock
