--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,10 @@ jobs:
       matrix:
         node-version: [10.x, 12.x, 14.x]
 
+    env:
+      CRYPTO_API_KEY: dwqddqwd
+      CRYPTO_API_SECRET: qwdqwdqwddqw
+      CRYPTO_BASE_URL: https://uat-api.3ona.co/v2
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
