--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start:test": "jest --watch",
         "start:dev": "nodemon",
         "build": "rimraf ./build && tsc",
-        "start": "npm run build && node build/index.js"
+        "start": "npm run build && node build/index.js",
+        "postinstall": "husky install"
     },
     "repository": {
         "type": "git",
@@ -31,8 +32,10 @@
         "@typescript-eslint/parser": "^4.8.1",
         "babel-jest": "^26.6.3",
         "eslint": "^7.14.0",
+        "husky": "^5.0.1",
         "jest": "^26.6.3",
         "nodemon": "^2.0.6",
+        "pinst": "^2.1.1",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.4.4",
         "ts-node": "^9.0.0",
