--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@babel/core": "^7.12.7",
         "@babel/preset-env": "^7.12.7",
         "@babel/preset-typescript": "^7.12.7",
+        "@types/crypto-js": "^4.0.1",
         "@types/jest": "^26.0.15",
         "@types/node": "^14.14.9",
         "@typescript-eslint/eslint-plugin": "^4.8.1",
@@ -44,6 +45,7 @@
     },
     "dependencies": {
         "axios": "^0.21.0",
+        "crypto-js": "^4.0.0",
         "dotenv": "^8.2.0",
         "pg": "^8.5.1"
     }
