--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "axios": "^0.21.0",
         "crypto-js": "^4.0.0",
         "dotenv": "^8.2.0",
-        "pg": "^8.5.1"
+        "pg": "^8.5.1",
+        "redux": "^4.0.5"
     }
 }
